--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <h1>Doomsday or a prosperous eternity: The AI in a nutshell</h1>
     <p></p>
     <p></p>
-    <h2></h2>
+    <h2>AI – Artificial Intelligence</h2>
     <p></p>
     <ul>
-      <li>asdf</li>
+      <li>ANI – Artificial Narrow Intelligence</li>
+      <li>AGI – Artificial General Intelligence</li>
+      <li>ASI – Artificial Super Intelligence</li>
     </ul>
     <p></p>
     <p></p>
@@ -16,9 +18,36 @@
     <p></p>
     <p></p>
     <p></p>
+    <h2></h2>
     <p></p>
     <p></p>
     <p></p>
     <p></p>
+    <div id="disqus_thread"></div>
+    <script>
+      /**
+       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+      /*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+      (function() {
+        // DON'T EDIT BELOW THIS LINE
+        var d = document,
+          s = d.createElement("script");
+        s.src = "https://https-jokkis80-github-io.disqus.com/embed.js";
+        s.setAttribute("data-timestamp", +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript
+      >Please enable JavaScript to view the
+      <a href="https://disqus.com/?ref_noscript"
+        >comments powered by Disqus.</a
+      ></noscript
+    >
   </body>
 </html>
