--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <p>
       ANI is the first of the AI’s and we as humans have already conquered this
       field with a robot that can play chess or ping-pong better than a human
-      for example. AGI the second in row and we are not yet be able to make
-      them, because AGI implies that an AI must be at least as Intelligent as a
-      Human which is at current times quite a big challenge. ASI is a super
+      for example. AGI is the next step and we are not yet able to make them,
+      because AGI implies that an AI must be at least as Intelligent as a Human
+      which is at current times quite a big challenge. ASI is a super
       Intelligence and as you can probably guess this means that this AI is a
       lot smarter than a human and just like a chimp would not understand a
       computer and how to use it, we could not even imagine what a super
