--- a/index.html
+++ b/index.html
@@ -1,129 +1,181 @@
 <!DOCTYPE html>
+<!--
+	Alpha by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <body>
-    <h1>Doomsday or a prosperous eternity: The AI in a nutshell</h1>
-    <p>
-      AI has been around for quite a while now and talked about in some cases –
-      even movies depict AI either in a good or bad way. Now what is AI exactly?
-    </p>
-    <h2>AI – Artificial Intelligence</h2>
-    <p>
-      Artificial Intelligence are the words to describe one or multiple
-      algorithms to solve a complex problem. Well that is at least what I would
-      describe it as. This is of course a broad topic which includes a lot of
-      different research fields, so it is difficult to come up with a good
-      definition. But AI is not just AI there are three so called calibers of
-      AI:
-    </p>
-    <ul>
-      <li>ANI – Artificial Narrow Intelligence</li>
-      <li>AGI – Artificial General Intelligence</li>
-      <li>ASI – Artificial Super Intelligence</li>
-    </ul>
-    <p>
-      ANI is the first of the AI’s and we as humans have already conquered this
-      field with a robot that can play chess or ping-pong better than a human
-      for example. AGI is the next step and we are not yet able to make them,
-      because AGI implies that an AI must be at least as Intelligent as a Human
-      which is at current times quite a big challenge. ASI is a super
-      Intelligence and as you can probably guess this means that this AI is a
-      lot smarter than a human and just like a chimp would not understand a
-      computer and how to use it, we could not even imagine what a super
-      Intelligent AI could do. But how could we even try to make something that
-      is as smart as a human? There are some theories which researchers came up
-      with. One of those would be to scan a brain and try to copy it exactly
-      into a machine but that proves to be difficult. Another way is to simulate
-      evolution and create algorithms that “breed” with each other to create new
-      and improved ones, these are called Genetic Algorithms.
-    </p>
-    <p>
-      An important fact too is that many experts believe that we are not far
-      from creating AGI. So, we actually could already have a Computer with
-      Human level of Intelligence in about 20 years. This never crossed my mind
-      bevor and now hearing that it is this close makes me a bit anxious but
-      also excited. About these mixed feelings I will be talking about in the
-      following text and explain why I feel that way.
-    </p>
-    <p></p>
-    <h2>Excitement</h2>
-    <p>
-      There are a lot of aspects which are great about the upcoming AI. Mostly
-      because I myself could influence this field of research in a way and be
-      part of this revolution. Another aspect is that ASI might be the last
-      invention humankind will ever make and after that will live in a
-      prosperous world. This AI could solve all problems we ever had and send us
-      to immortality. This immortality concept is new and no species has ever
-      made it to immortality because at some point in time every species falls
-      of the balance beam and goes right to extinction. Nanotechnology is also a
-      big deal with the whole “escaping mortality” concept because it could be
-      used to stop or even reverse aging in humans since aging is nothing more
-      than physical things going on in our bodies. Ray Kurzweil is someone who
-      has exactly does kind of visions and I totally agree that these can
-      happen. Another vision that we could use as a first step is that we just
-      enhance ourselves with an orthosis which is driven by an AI, that way we
-      don’t have a supercomputer just doing everything for us but we make the
-      computer a teammate that work only to improve us.
-    </p>
-    <p></p>
-    <p></p>
-    <h2>Anxiety</h2>
-    <p>
-      AI has of course also a side to it which can be at first very scary. If we
-      take the example of “turry” the future of humans could look very bad.
-      Turry was at first a normal ANI that was programmed to write a piece of
-      paper and try to improve itself so it can write better and better. What
-      the programmers didn’t know was that turry became soon an AGI and even
-      sooner after that an ASI. So it played dumb and after it got access to the
-      internet it had all resources available to destroy humanity. Now why did
-      it kill all humans? Turry probably thought to improve it would need more
-      resources and a way to ensure its persistence and the best way to do that
-      was to stop all humans from taking resources by killing them. In this
-      example we can see that if an AI is programmed the wrong way it could do a
-      lot of harm and potentially be an existential risk. For it to work we
-      would have to code all human values into the AI which can prove difficult
-      because not all values are the same for everyone.
-    </p>
-    <p></p>
-    <h2>Conclusive Words</h2>
-    <p>
-      This leaves us with the question if an ASI is born will it be a good God
-      or will it turn evil in the sense that no one can control this machine
-      anymore. And if an ASI is really that much smarter than us where is the
-      cap on this or is there no intelligence cap? Or even if this super smart
-      AI knows all we ever wanted to know but we wouldn’t be able to understand
-      it, would it not be theoretically possible that the ASI has a solution to
-      make every human super Intelligent too?
-    </p>
-    <p>
-      So finally we can say that we don’t know what will happen with AI in the
-      future but we can certainly predict certain aspects but still many
-      questions will stay unanswered for some time.
-    </p>
-    <div id="disqus_thread"></div>
-    <script>
-      /**
-       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-      /*
+  <head>
+    <title>Generic - Alpha by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body class="is-preload">
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header">
+        <h1>Jorrit's Blog</h1>
+      </header>
+
+      <!-- Main -->
+      <section id="main" class="container">
+        <header>
+          <h2>Doomsday or a prosperous eternity: The AI in a nutshell</h2>
+          <p>
+            AI has been around for quite a while now and talked about in some
+            cases – even movies depict AI either in a good or bad way. Now what
+            is AI exactly?
+          </p>
+        </header>
+        <div class="box">
+          <h3>AI – Artificial Intelligence</h3>
+          <p>
+            Artificial Intelligence are the words to describe one or multiple
+            algorithms to solve a complex problem. Well that is at least what I
+            would describe it as. This is of course a broad topic which includes
+            a lot of different research fields, so it is difficult to come up
+            with a good definition. But AI is not just AI there are three so
+            called calibers of AI:
+          </p>
+          <ul>
+            <li>ANI – Artificial Narrow Intelligence</li>
+            <li>AGI – Artificial General Intelligence</li>
+            <li>ASI – Artificial Super Intelligence</li>
+          </ul>
+          <p>
+            ANI is the first of the AI’s and we as humans have already conquered
+            this field with a robot that can play chess or ping-pong better than
+            a human for example. AGI is the next step and we are not yet able to
+            make them, because AGI implies that an AI must be at least as
+            Intelligent as a Human which is at current times quite a big
+            challenge. ASI is a super Intelligence and as you can probably guess
+            this means that this AI is a lot smarter than a human and just like
+            a chimp would not understand a computer and how to use it, we could
+            not even imagine what a super Intelligent AI could do. But how could
+            we even try to make something that is as smart as a human? There are
+            some theories which researchers came up with. One of those would be
+            to scan a brain and try to copy it exactly into a machine but that
+            proves to be difficult. Another way is to simulate evolution and
+            create algorithms that “breed” with each other to create new and
+            improved ones, these are called Genetic Algorithms.
+          </p>
+          <p>
+            An important fact too is that many experts believe that we are not
+            far from creating AGI. So, we actually could already have a Computer
+            with Human level of Intelligence in about 20 years. This never
+            crossed my mind bevor and now hearing that it is this close makes me
+            a bit anxious but also excited. About these mixed feelings I will be
+            talking about in the following text and explain why I feel that way.
+          </p>
+          <div class="row">
+            <div class="row-6 row-12-mobilep">
+              <h3>Excitement</h3>
+              <p>
+                There are a lot of aspects which are great about the upcoming
+                AI. Mostly because I myself could influence this field of
+                research in a way and be part of this revolution. Another aspect
+                is that ASI might be the last invention humankind will ever make
+                and after that will live in a prosperous world. This AI could
+                solve all problems we ever had and send us to immortality. This
+                immortality concept is new and no species has ever made it to
+                immortality because at some point in time every species falls of
+                the balance beam and goes right to extinction. Nanotechnology is
+                also a big deal with the whole “escaping mortality” concept
+                because it could be used to stop or even reverse aging in humans
+                since aging is nothing more than physical things going on in our
+                bodies. Ray Kurzweil is someone who has exactly does kind of
+                visions and I totally agree that these can happen. Another
+                vision that we could use as a first step is that we just enhance
+                ourselves with an orthosis which is driven by an AI, that way we
+                don’t have a supercomputer just doing everything for us but we
+                make the computer a teammate that work only to improve us.
+              </p>
+            </div>
+            <div class="row-6 row-12-mobilep">
+              <h3>Anxiety</h3>
+              <p>
+                AI has of course also a side to it which can be at first very
+                scary. If we take the example of “turry” the future of humans
+                could look very bad. Turry was at first a normal ANI that was
+                programmed to write a piece of paper and try to improve itself
+                so it can write better and better. What the programmers didn’t
+                know was that turry became soon an AGI and even sooner after
+                that an ASI. So it played dumb and after it got access to the
+                internet it had all resources available to destroy humanity. Now
+                why did it kill all humans? Turry probably thought to improve it
+                would need more resources and a way to ensure its persistence
+                and the best way to do that was to stop all humans from taking
+                resources by killing them. In this example we can see that if an
+                AI is programmed the wrong way it could do a lot of harm and
+                potentially be an existential risk. For it to work we would have
+                to code all human values into the AI which can prove difficult
+                because not all values are the same for everyone.
+              </p>
+            </div>
+            <div class="row-6 row-12-mobilep">
+              <h3>Conclusive Words</h3>
+              <p>
+                This leaves us with the question if an ASI is born will it be a
+                good God or will it turn evil in the sense that no one can
+                control this machine anymore. And if an ASI is really that much
+                smarter than us where is the cap on this or is there no
+                intelligence cap? Or even if this super smart AI knows all we
+                ever wanted to know but we wouldn’t be able to understand it,
+                would it not be theoretically possible that the ASI has a
+                solution to make every human super Intelligent too?
+              </p>
+              <p>
+                So finally we can say that we don’t know what will happen with
+                AI in the future but we can certainly predict certain aspects
+                but still many questions will stay unanswered for some time.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer id="footer">
+        <div id="disqus_thread"></div>
+        <script>
+          /**
+           *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+           *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+          /*
 var disqus_config = function () {
 this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
-      (function() {
-        // DON'T EDIT BELOW THIS LINE
-        var d = document,
-          s = d.createElement("script");
-        s.src = "https://https-jokkis80-github-io.disqus.com/embed.js";
-        s.setAttribute("data-timestamp", +new Date());
-        (d.head || d.body).appendChild(s);
-      })();
-    </script>
-    <noscript
-      >Please enable JavaScript to view the
-      <a href="https://disqus.com/?ref_noscript"
-        >comments powered by Disqus.</a
-      ></noscript
-    >
+          (function() {
+            // DON'T EDIT BELOW THIS LINE
+            var d = document,
+              s = d.createElement("script");
+            s.src = "https://https-jokkis80-github-io.disqus.com/embed.js";
+            s.setAttribute("data-timestamp", +new Date());
+            (d.head || d.body).appendChild(s);
+          })();
+        </script>
+        <noscript
+          >Please enable JavaScript to view the
+          <a href="https://disqus.com/?ref_noscript"
+            >comments powered by Disqus.</a
+          ></noscript
+        >
+      </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
