--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             solve a complex problem. Well, that is at least what I would
             describe it as. This is of course a broad topic which includes many
             different research fields, so it is difficult to come up with an
-            appropriate definition. But AI is not just AI there are three so
-            called calibers of AI:
+            appropriate definition. But AI is not just AI. There are three so
+            called “calibers” of AI:
           </p>
           <ul>
             <li>ANI – Artificial Narrow Intelligence</li>
@@ -43,29 +43,29 @@
           </ul>
           <p>
             ANI is the first of the AI’s and we, as humans, have already
-            conquered this field with a robot that can play chess or ping-pong
-            better than a human for example. AGI is the next step and we are not
-            yet able to make them, because AGI implies that an AI must be at
-            least as Intelligent as a human being which is at current times
-            quite a big challenge. ASI is a super Intelligence and as you can
-            probably guess, it means that this AI is smarter than a human and
-            just like a chimp would not understand a computer and how to use it,
-            we could not even imagine what a super Intelligent AI would be able
-            to do. But how could we even try to create something that is as
-            smart as a human being? There are a few theories researchers came up
-            with. One of these would be to scan a brain and try to copy it
-            exactly into a machine but that proves to be difficult. Another way
-            is to simulate evolution and create algorithms that “breed” with
-            each other to create new and improved ones, these are called Genetic
-            Algorithms.
+            conquered this field (e.g. with a robot that can play chess or
+            ping-pong better than a human). AGI is the next step and we are not
+            yet able to make it, because AGI implies that an AI must be at least
+            as Intelligent as a human being which is, at current times, quite a
+            big challenge. ASI is a super Intelligence and as you can probably
+            guess, it means that this AI is smarter than a human and just like a
+            chimp would not understand a computer and how to use it, we could
+            not even imagine what a super Intelligent AI would be able to do.
+            But how could we even try to create something that is as smart as a
+            human being? There are a few theories researchers came up with. One
+            of these would be to scan a brain and try to copy it exactly into a
+            machine but that proves to be difficult. Another way is to simulate
+            evolution and create algorithms that “breed” with each other to
+            create new and improved ones, these are called Genetic Algorithms.
           </p>
           <p>
             Another important fact is that many experts believe that we are not
             far from creating AGI. So, we actually could already have a Computer
             with Human level of Intelligence in about 20 years. This never
-            crossed my mind bevor and now hearing that it is this close makes me
-            a bit anxious but also excited. I will be talking about these mixed
-            feelings in the following text and explain why I’m feeling that way.
+            crossed my mind before and now hearing that it is this close makes
+            me a bit anxious but also excited. I will be talking about these
+            mixed feelings in the following text and explain why I’m feeling
+            that way.
           </p>
           <div class="row">
             <div class="row-6 row-12-mobilep">
@@ -79,13 +79,13 @@
                 all problems we ever had and send us to immortality. This
                 immortality concept is new, and no species has ever made it to
                 immortality because at some point in time every species falls
-                off the balance beam and goes right to extinction.
+                off the balance beam and goes right into extinction.
                 Nanotechnology is also a big deal with the whole “escaping
                 mortality” concept because it could be used to stop or even
                 reverse aging in humans since aging is nothing more than
                 physical things going on in our bodies. Ray Kurzweil is someone
                 who has exactly these kinds of visions and I totally agree that
-                these can happen. Another vision that we could use as a first
+                this can happen. Another vision that we could use as a first
                 step is that we just enhance ourselves with an orthosis which is
                 driven by an AI, that way we don’t have a supercomputer just
                 doing everything for us, but we make the computer a teammate
@@ -96,21 +96,21 @@
               <h3>Anxiety</h3>
               <p>
                 AI definitely has a side to it which can be at first very scary.
-                If we take the example of “turry” the future of humans could
+                If we take the example of “turry”, the future of humans could
                 look very bad. Turry was at first a normal ANI that has been
                 programmed to write a piece of paper and try to improve itself
                 so it can write better and better. What the programmers didn’t
                 know was that turry became soon an AGI and even sooner after
                 that an ASI. So, it played dumb and after it got access to the
                 internet it had all resources available to destroy humanity. Now
-                why did it kill all humans? Turry probably thought to improve it
-                would need more resources and a way to ensure its persistence
-                and the best way to do that was to stop all humans from taking
-                resources by killing them. In this example we can see that if an
-                AI is programmed the wrong way it could do a lot of harm and
-                potentially be an existential risk. For it to work we would have
-                to code all human values into the AI which can prove difficult
-                because not all values are the same for everyone.
+                why did it kill all humans? Turry probably thought that it would
+                need more resources to improve and a way to ensure its
+                persistence and the best way to do that was to stop all humans
+                from taking resources by killing them. In this example we can
+                see that if an AI is programmed the wrong way it could do a lot
+                of harm and potentially be an existential risk. For it to work
+                we would have to code all human values into the AI which can be
+                difficult because not all values are the same for everyone.
               </p>
             </div>
             <div class="row-6 row-12-mobilep">
@@ -126,9 +126,10 @@
                 human super Intelligent too?
               </p>
               <p>
-                So finally, we can say that we don’t know what will happen with
-                AI in the future, but we can surely predict certain aspects but
-                still many questions will stay unanswered for some time.
+                So finally, we can say that we don’t know what is going to
+                happen with AI in the future, but we can surely predict certain
+                aspects but still many questions will stay unanswered for some
+                time.
               </p>
             </div>
           </div>
