--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
         </div>
         <div class="box">
           <h3>2048 AI</h3>
+          <h4>Heuristic Approach</h4>
           <p>
             The «How i play Approach» was used for the first heuristic. Move mostly left and down and when there is something big to merge merge it right away. Almost never go right and up only if there is a full row. Final score -> 7346
           </p>
+          <h4>Expectimax Appraoch</h4>
           <p>
             First develop the expactimax approach so it searches with the newly spawned tiles. For each possibility get a score for that branch. The best branch with the highest score wins and that move is done. This is the “What is the perfect possible move” Approach
 <br>Snake:<br>
